--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
@@ -96,6 +97,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
